--- a/ChemometricsWithR/DESCRIPTION
+++ b/ChemometricsWithR/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: ChemometricsWithR
 Type: Package
 Title: Chemometrics with R - Multivariate Data Analysis in the Natural Sciences and Life Sciences
-Version: 0.1.7
-Date: 2012-10-10
+Version: 0.1.8
 Author: Ron Wehrens
-Maintainer: Ron Wehrens <ron.wehrens@fmach.it>
+Maintainer: Ron Wehrens <ron.wehrens@gmail.com>
 Description: The package provides functions and scripts used in the book "Chemometrics with R - Multivariate Data Analysis in the Natural Sciences and Life Sciences" by Ron Wehrens, Springer (2011).
 Depends: ChemometricsWithRData (>= 0.1.3), MASS, pls
 Suggests: nnet, randomForest, ada, rrcov, sfsmisc, ipred, fastICA, rda, TIMP, class, e1071, rpart, cluster, ALS, ptw, dtw, boot, leaps, lars, elasticnet, subselect, kohonen, signal, mclust
