--- a/ChemometricsWithR/NAMESPACE
+++ b/ChemometricsWithR/NAMESPACE
@@ -5,6 +5,4 @@
 exportPattern(".")
 
 # Import all packages listed as Imports or Depends
-import(
-  ChemometricsWithRData
-)
+import(pls, MASS, ChemometricsWithRData)
