--- a/ChemometricsWithR/NAMESPACE
+++ b/ChemometricsWithR/NAMESPACE
@@ -2,7 +2,23 @@
 # Remove the previous line if you edit this file
 
 # Export all names
-exportPattern(".")
+exportPattern("PCA", "variances", "screeplot", "reconstruct", "project",
+              "efa", "opa", "mcr", "SAstep", "SAfun", "SAfun2",
+              "GA.init.pop", "GA.select", "GA.XO", "GA.mut", "GAfun",
+              "GAfun2", "lda.loofun", "pls.cvfun", "AdjRkl", "rms",
+              "err.rate", "gini", "pick.peaks")
+S3method("biplot", "PCA")
+S3method("loadingplot", "PCA")
+S3method("scoreplot", "PCA")
+S3method("loadings", "PCA")
+S3method("scores", "PCA")
+S3method("summary", "PCA")
 
 # Import all packages listed as Imports or Depends
 import(pls, MASS, ChemometricsWithRData)
+importFrom("kohonen", "classvec2classmat", "classmat2classvec")
+
+## import from default packages
+importFrom("graphics", "abline", "arrows", "axis", "barplot", "box",
+           "par", "plot", "points", "text")
+importFrom("stats", "embed", "quantile", "runif")
